--- a/HTML-practice/01-Forms.HTML
+++ b/HTML-practice/01-Forms.HTML
@@ -13,7 +13,7 @@
 <body>
     <!-- The code here -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
         <a class="navbar-brand" href="#">HEY</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,40 +22,100 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home </a>
+                    <a class="nav-link" href="#">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="#">News</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="#">Sign-Up</a>
                 </li>
             </ul>
         </div>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+          </form>
     </nav>
+    </br>
 
     <div class="container">
         <header>
             <h1 class="text-center"> Register Here </h1>
         </header>
+        </br>
+
         <form>
             <div class="row">
                 <div class="col">
+                    <label for="inputFirstName">First Name</label>
                     <input type="text" class="form-control" placeholder="First name" id="firstName">
                 </div>
                 <div class="col">
+                    <label for="inputLastName">Last Name </label>
                     <input type="text" class="form-control" placeholder="Last name" id="lastName">
                 </div>
-                <div>
-                    
-                </div>
-
             </div>
+            </br>
+
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputEmail4">Email</label>
+                    <input type="email" class="form-control" id="inputEmail4">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputPassword4">Password</label>
+                    <input type="password" class="form-control" id="inputPassword4">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputAddress">Address</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+            </div>
+            <div class="form-group">
+                <label for="inputAddress2">Address 2</label>
+                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputCity">City</label>
+                    <input type="text" class="form-control" id="inputCity">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputState">Country Of Birth</label>
+                    <select id="inputState" class="form-control">
+                        <option selected>Please Select .....</option>
+                        <option>United States Of America</option>
+                        <option>United Kingdom</option>
+                        <option>Brazil</option>
+                        <option>Norway</option>
+                        <option>United arab emirates</option>
+                        <option>Turkey</option>
+                        <option>Canada</option>
+                        <option>Malyasia</option>
+                        <option>India</option>
+                        <option>Nigeria</option>
+                        <option>South America</option>
+                        <option>Iceland</option>
+                        <option>Morocco</option>
+                    </select>
+                </div>
+                <div class="form-group col-md-2">
+                    <label for="inputZip">PostCode</label>
+                    <input type="text" class="form-control" id="inputZip">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Sign in</button>
+
         </form>
-
-
-
     </div>
+
+
+
+
+
+
+
 
 
 
