--- a/HTML-practice/HEY-Webpage/01-Forms.HTML
+++ b/HTML-practice/HEY-Webpage/01-Forms.HTML
@@ -22,13 +22,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="./Homepage.html">Home</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="#">News</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Sign-Up</a>
+                    <a class="nav-link" href="./01-Forms.HTML">Sign-Up</a>
                 </li>
             </ul>
         </div>
