--- a/API-Work/01-Band/index.html
+++ b/API-Work/01-Band/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Band Index</title>
+    <title>Band Index Test </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 
 <body>
     <section>
-        <div class="container">
+        <div class="container text-center">
             <header>
-                <h1> Create Band </h1>
+                <h1> Create Band: </h1>
             </header>
             <div class="row">
                 <div class="col-md">
@@ -30,6 +30,172 @@
             <button type="submit" class="btn btn-success" onclick="createBand()"> Create Band</button>
         </div>
     </div>
+    </br>
+
+    <header class="d-flex justify-content-center">
+        <h1>Musician create:</h1>
+    </header>
+    <div class="row">
+        <div class="col-md">
+            <label for="" class="form-check-label">Name:</label>
+            <input type="text" name="musicianCreate" id="musicianName" class="form-control">
+        </div>
+
+        <div class="col-md">
+            <label for="" class="form-check-label">Strings:</label>
+            <!-- <input type="text" name="musicianCreate" id="strings" class="form-control"> -->
+            <input type="number" name="musicianCreate" id="strings" class="form-control">
+        </div>
+        <div class="col-md">
+            <label for="" class="form-check-label">Genre:</label>
+            <input type="text" name="musicianCreate" id="genre" class="form-control">
+        </div>
+    </div>
+    </br>
+
+    <div class="row">
+        <div class="col-md text-center">
+            <button type="submit" class="btn btn-success" onclick="createMusician()">
+                Create M
+            </button>
+        </div>
+    </div>
+    </br>
+
+    <header class="container text-center">
+        <h1> Band Read: </h1>
+    </header>
+
+    <div class="row">
+        <div class="col-md readAllBand">
+
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md text-center">
+            <button type="submit" class="btn btn-success" onclick="readAllBand()">
+                Read B
+            </button>
+        </div>
+    </div>
+
+    <br>
+    <header class="d-flex justify-content-center">
+        <h1>Musician read:</h1>
+    </header>
+    <div class="row">
+        <div class="col-md readAllBand">
+
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md text-center">
+            <button type="submit" class="btn btn-success" onclick="musiciansread()">
+                Read M
+            </button>
+        </div>
+    </div>
+
+    <br>
+    <header class="d-flex justify-content-center">
+        <h1>Band delete:</h1>
+    </header>
+    <br>
+    <div class="row">
+        <div class="col-md">
+            <label for="" class="form-check-label">Id:</label>
+            <input type="number" name="bandDelete" id="bandIdDelete" class="form-control">
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md text-center">
+            <button type="submit" class="btn btn-success" onclick="deleteByIdBand()">
+                Delete  B
+            </button>
+        </div>
+    </div>
+
+    <br>
+    <header class="d-flex justify-content-center">
+        <h1>Musician delete:</h1>
+    </header>
+    <br>
+    <div class="row">
+        <div class="col-md">
+            <label for="" class="form-check-label">Id:</label>
+            <input type="number" name="musicianDelete" id="musicianIdDelete" class="form-control">
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md text-center">
+            <button type="submit" class="btn btn-success" onclick="deleteMusician()">
+                Delete M
+            </button>
+        </div>
+    </div>
+
+    <br>
+    <header class="d-flex justify-content-center">
+        <h1>Band update:</h1>
+    </header>
+    <br>
+    <div class="row">
+        <div class="col-md">
+            <label for="" class="form-check-label">Id:</label>
+            <input type="number" name="bandUpdate" id="bandIdUpdate" class="form-control">
+        </div>
+        <div class="col-md">
+            <label for="" class="form-check-label">Name:</label>
+            <input type="text" name="bandUpdate" id="bandNameUpdate" class="form-control">
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md text-center">
+            <button type="submit" class="btn btn-success" onclick="updateBand()">
+                Update B
+            </button>
+        </div>
+    </div>
+
+    <br>
+    <header class="d-flex justify-content-center">
+        <h1>Musician update:</h1>
+    </header>
+    <br>
+    <div class="row">
+        <div class="col-md">
+            <label for="" class="form-check-label">Id:</label>
+            <input type="number" name="musicianUpdate" id="musicianIdUpdate" class="form-control">
+        </div>
+        <div class="col-md">
+            <label for="" class="form-check-label">Name:</label>
+            <input type="text" name="musicianUpdate" id="musicianNameUpdate" class="form-control">
+        </div>
+        <div class="col-md">
+            <label for="" class="form-check-label">Strings:</label>
+            <input type="number" name="musicianUpdate" id="musicianStringsUpdate" class="form-control">
+        </div>
+        <div class="col-md">
+            <label for="" class="form-check-label">Type:</label>
+            <input type="text" name="musicianUpdate" id="musicianTypeUpdate" class="form-control">
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md text-center">
+            <button type="submit" class="btn btn-success" onclick="updateMusician()">
+                Update M
+            </button>
+        </div>
+    </div>
+</div>
+
+
 
 
 
@@ -38,6 +204,7 @@
 
     <!-- To test and practice my JavaScript code for Band API -->
 
+    <script src="./musician.js"></script>
     <script src="./bandCrud.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
